// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeAndReveal renders when the transition is not triggered 1`] = `
@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

<div
  aria-hidden="true"
  class="c0"
  style="opacity:0;height:0px;overflow:hidden;visibility:hidden;transition:height 500ms ease-in-out, opacity 500ms ease-in-out, visibility 0ms 500ms"
>
  <div>
    Content to fade
  </div>
</div>
`;

exports[`FadeAndReveal renders when the transition is triggered 1`] = `
@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none !important;
    transition: none !important;
  }
}

<div
  aria-hidden="false"
  class="c0"
  style="opacity:1;height:auto;overflow:hidden;visibility:visible;transition:unset"
>
  <div>
    Content to fade
  </div>
</div>
`;
